<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_42dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:background="@drawable/bg_login_card"
        android:elevation="@dimen/_5dp"
        android:padding="@dimen/_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLoginTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/complete_your_profile"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/vwDivider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2dp"
            android:layout_marginTop="@dimen/_20dp"
            android:background="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLoginTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vwDivider" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:padding="@dimen/_12dp"
            android:text="jainam"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPassword" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/confirm_password"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPassword" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/enter_confirm_password"
            android:inputType="textPassword"
            android:padding="@dimen/_12dp"
            android:text="jainam"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvConfirmPassword" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBirthDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/birth_day"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etConfirmPassword" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etBirthDay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/mm_dd_yyyy"
            android:inputType="date"
            android:padding="@dimen/_12dp"
            android:text="12/21/2025"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvBirthDay" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvContactNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/contact_no"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etBirthDay" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etContactNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/enter_contact_no"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="@dimen/_12dp"
            android:singleLine="true"
            android:text="8888888888"
            android:textSize="@dimen/_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvContactNo" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chkPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:text="I agree to Woliba’s Terms of Service and Privacy Policy."
            android:textColor="@color/black"
            android:textSize="@dimen/_14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etContactNo" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>